# pkgfence

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/: AGENTS.md
.github/workflows/: AGENTS.md  test.yml
assets/: AGENTS.md  scanner-hashes.json
config/: AGENTS.md  defaults.yaml  eol-catalog.yaml  exclusions.yaml  n8n-pkgfence-webhook.json  registry.example.yaml  registry.schema.yaml
docs/: ARCHITECTURE.md
references/: AGENTS.md
scripts/: AGENTS.md  compile_requirements.py  discover.py  discover_remote.py  enrich_depsdev_scorecard.py  enrich_epss.py  enrich_ghsa.py  enrich_threats.py  eol_detect.py  heuristics.py  installed_check.py  lookup_command.py  lookup_parser.py  lookup_report.py  lookup_websearch.py  notify.py  publish.py  recommend_fix.py  registry_cli.py  report.py  scan_cdn.py  scan_command.py  scan_local.py  scan_remote.py  scheduled-scan.bat  ssh_precheck.py  triage.py  watch_daemon.py
scripts/lib/: AGENTS.md  (+23 more)
tests/: AGENTS.md  conftest.py  test_audit_log_atomicity.py  test_baseline.py  test_canary_against_reality.py  test_compile_requirements.py  test_config.py  test_discover.py  test_discover_remote.py  test_ecosystems.py  test_enrich_epss.py  test_enrich_ghsa.py  test_enrich_threats.py  test_eol_detect.py  test_epss_client.py  test_exceptions.py  test_frontmatter.py  test_ghsa_client.py  test_heuristic_entropy.py  test_heuristics.py  test_heuristics_age.py  test_installed_check.py  test_kev_client.py  test_logger.py  test_notify.py  test_osv_client.py  test_priority_score.py  test_proc.py  test_publish.py  test_purl.py  test_registry_cli_ssh.py  test_registry_validation.py  test_report.py  test_s4_no_remote_content_exfil.py  test_safety_invariants.py  test_sarif.py  test_scan_command.py  test_scan_command_ssh.py  test_scan_local.py  test_scan_remote.py  (+4 more)
(+13 files in other folders)
