[project]
name = "pkgfence"
version = "0.1.0"
description = "Multi-codebase dependency and supply-chain vulnerability scanner — Claude Code skill"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "ruamel.yaml==0.18.6",
    "httpx[http2]==0.27.2",
    "jsonschema==4.23.0",
    "portalocker==2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
]

[project.scripts]
pkgfence = "scripts.scan_command:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]
exclude = ["config*", "planning*", "references*", "tests*", "fixtures*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --strict-markers"
